--- a/fl22.html
+++ b/fl22.html
@@ -50,7 +50,7 @@ div.c {
 <a href="fso22.html" style="color: #27F5CA;">Fun Spot Orlando 6/8/2022 & 6/13/2022</a><br>
 <a href="epcot22.html" style="color: #27F5CA;">Epcot 6/2/2022</a><br>
 <a href="dhs22.html" style="color: #27F5CA;">Disney's Hollywood Studios 6/2/2022</a><br>
-<a href="mk22.html" style="color: #27F5CA;">Maagic Kingdom 6/3/2022</a><br>
+<a href="mk22.html" style="color: #27F5CA;">Magic Kingdom 6/3/2022</a><br>
 <a href="bgt22.html" style="color: #27F5CA;">Busch Gardens Tampa 6/4/2022-6/6/2022</a><br>
 <a href="swo22.html" style="color: #27F5CA;">SeaWorld Orlando 6/10/2022</a><br>
 <a href="lego22.html" style="color: #27F5CA;">Legoland Florida 6/9/2022</a><br>
