--- a/fsk22.html
+++ b/fsk22.html
@@ -61,10 +61,10 @@ I don't have many comments on <b>Galaxy Spin</b> or <b>Kiddie Coaster</b>. Both 
 </p>
 
 <br><h2>Other Rides</h2>
-<p>I rode the Old Town ferris wheel once, mainly for the view. This attraction is included with the Fun Spot wristband and operated by FSK employees. I had hoped to ride Hot Seat as well, but it was dismantled. </p>
+<p>I rode the Old Town ferris wheel once, mainly for the view. This attraction is included with the Fun Spot wristband and operated by FSK employees. I had hoped to ride Hot Seat as well, but it was dismantled. Fun Spot has rides for children, typical fair rides, go-karts, and some thrilling flat rides. </p>
 
 <br><h2>Food & Merchandise</h2>
-<p>I had a small pepperoni pizza inside the arcade building for dinner. I also purchased a souvenir drink cup. My total was $19. I highly recommend buying the refillable cup. It costs $11 with tax and is valid at any Fun Spot location for the whole year! On just this visit to FSK, I filled the cup six times. </p>
+<p>I had a small pepperoni pizza inside the arcade building for dinner. I also purchased a souvenir drink cup. My total was $19. I highly recommend buying the refillable cup. It costs $11 with tax and is valid at all Fun Spot locations for the whole year! On just this visit to FSK, I filled the cup six times. </p>
 
 <br><h2>Cost</h2>
 <p>Since I had planned to visit all three Fun Spot locations in 2022, I purchased a season pass last November for $85.</p>
