Fix park rankings issues

--- a/rankings.html
+++ b/rankings.html
@@ -52,8 +52,9 @@ div.c {
 <a href="top50.html" style="color: #27F5CA;">Top 50 Roller Coasters (2020)</a><br>
 <a href="worstcoasters.html" style="color: #27F5CA;">The Worst Coasters I've Ridden</a><br>
 <a href="howirank.html" style="color: #27F5CA;">How I Rank Roller Coasters</a><br>
-<a href="topparks21.html" style="color: #27F5CA;">Current Top 10 Amusement Parks</a><br>
-<a href="topparks.html" style="color: #27F5CA;">Top 10 Amusement Parks(2020)</a><br>
+<a href="topparks22.html" style="color: #27F5CA;">Current Top 15 Amusement Parks</a><br>
+<a href="topparks21.html" style="color: #27F5CA;">Top 10 Amusement Parks (2021)</a><br>
+<a href="topparks.html" style="color: #27F5CA;">Top 10 Amusement Parks (2020)</a><br>
 
 
 </div>
