--- a/epcot22.html
+++ b/epcot22.html
@@ -65,7 +65,7 @@ div.c {
 <p>I had lunch at Sunshine Seasons. This meal was one of my favorites of the trip; I got the rotisserie chicken with green beans and potatoes. With a small bottled water, my total was $16. </p>
 
 <br><h2>Cost</h2>
-<p>I spent $392 on a two-day park hopper ticket with Genie+ and one IAS purchase. On this day, I saved all Genie+ selections for <a href= "dhs22.html" style="color: #27F5CA;">Hollywood Studios</a>. While it is extremely expensive to pay nearly $200/day for an individual to visit theme parks and skip a few lines, it took me 16 years as it was to get back to Disney World. It will likely be at least another 5 years before I return to Florida. While not packed with thrill coasters, the Disney parks are special...and worth every penny in my opinion.  </p>
+<p>I spent $392 on a two-day park hopper ticket with Genie+ and one IAS purchase. On this day, I saved all Genie+ selections for <a href= "dhs22.html" style="color: #27F5CA;">Hollywood Studios</a>. While it is extremely expensive to pay nearly $200/day for an individual to visit theme parks and skip a few lines, it took me 16 years as it was to get back to Disney World. It will likely be at least another 5 years before I return to Florida. While not packed with thrill coasters, the Disney parks are special...and worth every penny in my opinion. Check out the cost breakdown of my entire trip <a href="flcost22.html" style="color: #27F5CA;">here</a>.  </p>
 
 <br><h2>Photos</h2>
 <p>These photos were taken by me. Please credit this website if used.  Check out my <a href="photos.html" style="color: #27F5CA;">photos page</a> for pictures of Disney World from 2006. </p>
