--- a/fso22.html
+++ b/fso22.html
@@ -67,7 +67,7 @@ No comment on <b>Sea Serpent</b>.
 <p>I bought chicken tenders and fries from Kluckee for $11, and a huge piece of pizza from Sbarro for $5. I used my souvenir cup 8 times across my two visits to FSO. Combined with FSK, each fill cost me less than 80 cents. I love visiting the Fun Spot parks and not being gypped when it comes to food and drink. </p>
 
 <br><h2>Cost</h2>
-<p>Since I had planned to visit all three Fun Spot locations in 2022, I purchased a season pass last November for $85. With three total visits to the Florida Fun Spots, admission cost me $28 each time. </p>
+<p>Since I had planned to visit all three Fun Spot locations in 2022, I purchased a season pass last November for $85. With three total visits to the Florida Fun Spots, admission cost me $28 each time. Check out the cost breakdown of my entire trip <a href="flcost22.html" style="color: #27F5CA;">here</a>. </p>
 
 <br><h2>Photos</h2>
 <p>These photos were taken by me. Please credit this website if used.  </p>
