--- a/dhs22.html
+++ b/dhs22.html
@@ -67,7 +67,7 @@ Over in Toy Story Land, Mack's <b>Slinky Dog Dash</b> offers a very different ex
 <p>I bought chocolate ice cream and a water bottle from Hollywood Scoops for $10 when I first arrived at the park. Later, I ate dinner at Woody's Lunch Box for $14. Both meals were very good.</p>
 
 <br><h2>Cost</h2>
-<p>I spent $392 on a two-day park hopper ticket with Genie+ and one IAS purchase. On this day, I saved about 2.5 hours of queueing for 3 rides with Genie+. While it is extremely expensive to pay nearly $200/day for an individual to visit theme parks and skip a few lines, it took me 16 years as it was to get back to Disney World. It will likely be at least another 5 years before I return to Florida. While not packed with thrill coasters, the Disney parks are special...and worth every penny in my opinion.  </p>
+<p>I spent $392 on a two-day park hopper ticket with Genie+ and one IAS purchase. On this day, I saved about 2.5 hours of queueing for 3 rides with Genie+. While it is extremely expensive to pay nearly $200/day for an individual to visit theme parks and skip a few lines, it took me 16 years as it was to get back to Disney World. It will likely be at least another 5 years before I return to Florida. While not packed with thrill coasters, the Disney parks are special...and worth every penny in my opinion. Check out the cost breakdown of my entire trip <a href="flcost22.html" style="color: #27F5CA;">here</a>.  </p>
 
 <br><h2>Photos</h2>
 <p>These photos were taken by me. Please credit this website if used.  Check out my <a href="photos.html" style="color: #27F5CA;">photos page</a> for pictures of Disney World from 2006. </p>
