--- a/fsk22.html
+++ b/fsk22.html
@@ -67,7 +67,7 @@ I don't have many comments on <b>Galaxy Spin</b> or <b>Kiddie Coaster</b>. Both 
 <p>I had a small pepperoni pizza inside the arcade building for dinner. I also purchased a souvenir drink cup. My total was $19. I highly recommend buying the refillable cup. It costs $11 with tax and is valid at all Fun Spot locations for the whole year! On just this visit to FSK, I filled the cup six times. </p>
 
 <br><h2>Cost</h2>
-<p>Since I had planned to visit all three Fun Spot locations in 2022, I purchased a season pass last November for $85.</p>
+<p>Since I had planned to visit all three Fun Spot locations in 2022, I purchased a season pass last November for $85. Check out the cost breakdown of my entire trip <a href="flcost22.html" style="color: #27F5CA;">here</a>.</p>
 
 <br><h2>Photos</h2>
 <p>These photos were taken by me. Please credit this website if used.  </p>
