--- a/bgt22.html
+++ b/bgt22.html
@@ -70,7 +70,7 @@ I don't have comments on Cobra's Curse, Sand Serpent, or Air Grover.
 </p>
 
 <br><h2>Other Rides</h2>
-<p>I rode Congo River Rapids and Stanley Falls Flume to cool down. Both water rides were typical. I'd hoped to ride Falcon's Fury, but it was closed for maintenance on my visit.  </p>
+<p>I rode Congo River Rapids and Stanley Falls Flume to cool down. Both water rides were typical. I'd hoped to ride Falcon's Fury, but it was closed for maintenance on my visit. Skyride was also not operating.  </p>
 
 <br><h2>Food & Merchandise</h2>
 <p>I ate meals at Zagora Cafe for $23, Chick-fil-A for $18, Dragon Fire Grill for $21, Oasis Pizza for $21, and Twisted Tails Pretzels for $14. The food at BGT was mostly mediocre and very overpriced. In terms of merch, I bought an Iron Gwazi t-shirt for $29 and a coaster mug for $17. A lot of their merchandise was themed to animals rather than coasters. </p>
