Peppa pig and spacing issues

--- a/fl22.html
+++ b/fl22.html
@@ -44,7 +44,7 @@ div.c {
 <a href="other.html" style="color: #27F5CA;">Other Links</a>
 </center></nav></div><br>
 
-<h3>Here you will find all content related to my 13-day solo Florida trip. I created a separate page so my Trip Reports page didn't become too cluttered.</h3>
+<h3>Here you will find all content related to my 13-day solo Florida coaster trip. I created a separate page so my Trip Reports page didn't become too cluttered.</h3>
 
 <a href="fsk22.html" style="color: #27F5CA;">Fun Spot Kissimmee 6/1/2022</a><br>
 <a href="fso22.html" style="color: #27F5CA;">Fun Spot Orlando 6/8/2022 & 6/13/2022</a><br>
