--- a/fso22.html
+++ b/fso22.html
@@ -48,7 +48,7 @@ div.c {
 <h3>After going to some very busy parks, spending time at another Fun Spot location was a welcomed change from crowds, toddler meltdowns, and long walks.</h3><br>
 
 
-<br><h2>Overview</h2>
+<h2>Overview</h2>
 <p>I visited FSO on June 8 from 5:30PM-9:30PM and June 13 from 11:30AM-1:30PM. My coaster totals were 25 on White Lightning, 3 on Freedom Flyer, and 1 on Sea Serpent. This park has similar vibes to the Fun Spot in Kissimmee, but is not broken into two sections and has metal detectors to enter. While I prefer the coaster collection at FSK, FSO has the better location. There are also more go-kart tracks. Like FSK, wait times are pretty much nonexistent here. I am also happy that the Fun Spots are open until midnight, which is usually 2 or 3 hours later than the big parks.</p>
 
 <br><h2>Coasters</h2>
@@ -64,7 +64,7 @@ No comment on <b>Sea Serpent</b>.
 <p>I rode FireCracker, Hot Seat, Liberty Swing, and Rip Curl once each. I liked <b>Hot Seat</b> the most, but wish it were longer. We only got two full swings before it ended. FSO also has fair rides, kiddie rides, and go-karts. There is a lot of overlap with the rides st FSK. </p>
 
 <br><h2>Food & Merchandise</h2>
-<p>I bought chicken tenders and fries from Kluckee for $11, and a huge piece of pizza from Sbarro for $5. I used my souvenir cup 8 times across my two visits to FSO. Combined with FSK, each fill cost me less than 80 cents. I love visiting the Fun Spot parks and not being gypped when it comes to food and drink. </p>
+<p>I bought chicken tenders and fries from Kluckee for $11, and a huge piece of pizza from Sbarro for $5. I used my souvenir cup 8 times across my two visits to FSO. Combined with FSK, each fill cost me less than 80 cents. I love visiting the Fun Spot parks and not being gouged when it comes to buying food and drinks. </p>
 
 <br><h2>Cost</h2>
 <p>Since I had planned to visit all three Fun Spot locations in 2022, I purchased a season pass last November for $85. With three total visits to the Florida Fun Spots, admission cost me $28 each time. Check out the cost breakdown of my entire trip <a href="flcost22.html" style="color: #27F5CA;">here</a>. </p>
