--- a/swo22.html
+++ b/swo22.html
@@ -48,7 +48,7 @@ div.c {
 <h3>I had a lacluster first-time visit to SWO, which was disappointing after some top-notch days at Busch Gardens.</h3><br>
 
 
-<br><h2>Overview</h2>
+<h2>Overview</h2>
 <p>SeaWorld Orlando was the last new park of the trip; I made it out here on day 10. I visited from 9:30AM-10PM and rode Mako 8 times, Manta 3 times, Kraken twice, Ice Breaker twice, Journey to Atlantis once, and Super Grover's Box Car Derby once. Perhaps fatigue was hitting me, but I was not impressed by this park. The coasters themselves were excellent. Park operations were terrible. Starting with security: only one metal detector lane out of six was open. Manta and Ice Breaker had significant downtime. Ice Breaker and Kraken only ran one train. Wait times on the app did not match posted signs. Both were erroneous 90% of the time. Weather delayed rides for 3 hours. Also, lots of rides closed well before park closure at night. Most areas badly needed spruced up, repainted, or otherwise updated. Except for the coasters, SeaWorld Orlando was a big disappointment. I have the opposite opinion of SeaWorld San Antonio, which lacks standout coasters but has a nice atmosphere. Weird. However, I'll gladly give this park another chance when I'm in Orlando next time; especially since they're adding another B&M. </p>
 
 <br><h2>Coasters</h2>
