--- a/zdts21.html
+++ b/zdts21.html
@@ -47,7 +47,7 @@ div.c {
 
 <h3>After hearing great things about Switchback, a small wooden coaster that opened in 2015, I vowed to stop in Seguin for some rides on my next trip to San Antonio.</h3><br>
 
-<br><h2>Overview</h2>
+<h2>Overview</h2>
 <p>This report is part 1 of 3 about a July 2021 trip to San Antonio that I took with a friend. Check out <a href= "swsa21.html" style="color: #27F5CA;"> part 2 at SeaWorld</a> and <a href= "sfft21.html" style="color: #27F5CA;">part 3 at Six Flags</a>!  We arrived at ZDT's around 12:15PM and stayed for two hours. All outdoor attractions were closed the first hour due to thunderstorms, so we ate lunch first. When the weather cleared, we rode Switchback 6 times (4x in the back, 1x in the front, and 1x in row 3). We never had more than a 2-train wait for this coaster. Employees at ZDT's were very friendly, and the place had a good variety of attractions. My only complaint was that the inside eating area was very dark and needed better lighting.  </p>
 
 <br><h2>Coaster</h2>
