--- a/bgt22.html
+++ b/bgt22.html
@@ -48,7 +48,7 @@ div.c {
 <h3>I sandwiched my visits to BGT in between the Orlando parks. Although it made for extra travel, Busch Gardens was so worth the hassle!</h3><br>
 
 
-<br><h2>Overview</h2>
+<h2>Overview</h2>
 <p>On Day 4 of my trip, I spent the morning and early afternoon traveling to Tampa via Amtrak. When I booked this trip, the daily shuttle from Orlando to BGT was not operational. It's now back, but I'd still consider other options, as the shuttle arrives to the park late and leaves early. Anyway, I spread out my visit to Busch Gardens over three days. I was there on Saturday from 4PM-10PM, Sunday from 10AM-10PM, and Monday from 10AM-3:15PM before taking Amtrak back to Orlando that evening. Thankfully, the weather cooperated the whole time in Tampa, and crowds weren't too bad. I rode Kumba 13 times, Iron Gwazi 11 times, Cheetah Hunt 6 times, SheiKra 6 times, Montu 5 times, Scorpion twice, Tigris twice, Sand Serpent once, Cobra's Curse once, and Air Grover once. Busch Gardens is a very big and beautiful park with a world-class coaster collection. I loved the animals too! Without seeking them out, I came across flamingos, penguins, alligators, ducks, turtles, cheetahs and elephants. This is my #3 park behind Cedar Point and Kings Island. Operations were kind of slow, and in-park purchases were pricier than competitors. </p>
 
 <br><h2>Coasters</h2>
@@ -76,7 +76,7 @@ I don't have comments on Cobra's Curse, Sand Serpent, or Air Grover.
 <p>I ate meals at Zagora Cafe for $23, Chick-fil-A for $18, Dragon Fire Grill for $21, Oasis Pizza for $21, and Twisted Tails Pretzels for $14. The food at BGT was mostly mediocre and very overpriced. In terms of merch, I bought an Iron Gwazi t-shirt for $29 and a coaster mug for $17. A lot of their merchandise was themed to animals rather than coasters. </p>
 
 <br><h2>Cost</h2>
-<p>I bundled my 2-night hotel stay with the SeaWorld/Busch combo admission ticket for $497. The package included a one-time Quick Queue as well, but I only used it on Cheetah Hunt and Cobra's Curse at BGT and saved 2 hours. I also received a cute goodie bag at check in with a lanyard, luggage tag, stuffed animal, and sunglasses. Check out the cost breakdown of my entire trip <a href="flcost22.html" style="color: #27F5CA;">here</a>.</p>
+<p>I bundled my 2-night hotel stay with the SeaWorld/Busch combo admission ticket for $497. The package included a one-time Quick Queue as well, but I only used it on Cheetah Hunt, Congo River Rapids, and Cobra's Curse at BGT which saved 3 hours. I also received a cute goodie bag at check in with a lanyard, luggage tag, stuffed animal, and sunglasses. Check out the cost breakdown of my entire trip <a href="flcost22.html" style="color: #27F5CA;">here</a>.</p>
 
 <br><h2>Photos</h2>
 <p>These photos were taken by me. Please credit this website if used.  </p>
