--- a/fsk22.html
+++ b/fsk22.html
@@ -48,7 +48,7 @@ div.c {
 <h3>I kicked off my epic Florida trip by spending a few hours at FSK. I loved every minute at this park.</h3><br>
 
 
-<br><h2>Overview</h2>
+<h2>Overview</h2>
 <p>After spending some time flying, I visited Fun Spot from 4:45PM-8:15PM. A 20-minute downpour briefly shut down the rides about halfway through my visit. I rode Mine Blower 8 times, Hurricane 4 times, Galaxy Spin twice, and Kiddie Coaster once. There were no waits while I was there, but it did look like it got busier as I left the park. The Fun Spot parks offer great value, nice employees, reasonable park policies, and generally clean walkways and surfaces. I will say that at the Kissimmee location, it was a bit strange having to walk through Old Town to reach some of their rides. Doing so required me to mingle with some people who weren't traditional theme park goers. I am glad that the extra attractions exist though! Fun Spot uses a wristband system, and will scan each rider's before loading most of the time.</p>
 
 <br><h2>Coasters</h2>
