--- a/allparks.html
+++ b/allparks.html
@@ -61,6 +61,7 @@ div.c {
 <li>Hersheypark - 2010</li>
 <li>Houston Rodeo - 2009 </li>
 <li>Kemah Boardwalk - 2007, 2014, <a href="kemah2020.html" style="color: #27F5CA;">2020</a></li>
+<li>Kennywood Park - <a href="kenny22.html" style="color: #27F5CA;">2022</a></li>
 <li>Kings Island - <a href="ki2021.html" style="color: #27F5CA;">2021</a></li>
 <li>La Ronde - <a href="laronde2016.html" style="color: #27F5CA;">2016</a></li>
 <li>Legoland Florida - <a href="lego22.html" style="color: #27F5CA;">2022</a></li>
