--- a/top5022.html
+++ b/top5022.html
@@ -46,7 +46,7 @@ div.c {
 <a href="other.html" style="color: #27F5CA;">Other Links</a>
 </center></nav></div><br>
 
-<h3>These are my favorite 50 roller coasters thus far, accounting for roughly 22% of all coasters I've ridden.</h3>
+<h3>These are my favorite 50 roller coasters thus far, accounting for roughly 21% of all coasters I've ridden.</h3>
 
 
 <ol>
@@ -71,6 +71,7 @@ div.c {
 <li>Maxx Force - Six Flags Great America</li>
 <li>Shivering Timbers - Michigan's Adventure</li>
 <li>Leviathan - Canada's Wonderland</li>
+<li>Steel Curtain - Kennywood Park</li>
 <li>Copperhead Strike - Carowinds</li>
 <li>Wonder Woman Golden Lasso Coaster - Six Flags Fiesta Texas</li>
 <li>Behemoth - Canada's Wonderland</li>
@@ -85,6 +86,7 @@ div.c {
 <li>Goliath - Six Flags Great America</li>
 <li>Kraken - SeaWorld Orlando </li>
 <li>Riddler's Revenge - Six Flags Magic Mountain</li>
+<li>Phantom's Revenge - Kennywood Park</li>
 <li>Boardwalk Bullet - Kemah Boardwalk</li>
 <li>Mr. Freeze Reverse Blast - Six Flags Over Texas</li>
 <li>Cheetah Hunt - Busch Gardens Tampa </li>
@@ -98,9 +100,9 @@ div.c {
 <li>Colossus - Thorpe Park</li>
 <li>Rougarou - Cedar Point</li>
 <li>Raptor - Cedar Point</li>
-<li>Great Bear - Hersheypark</li>
+<!--<li>Great Bear - Hersheypark</li>
 <li>Fahrenheit - Hersheypark</li>
-<!--<li>Maverick - Cedar Point</li>
+<li>Maverick - Cedar Point</li>
 <li>Superman Ultimate Flight - 2 parks </li>
 <li>Deja Vu - Six Flags Magic Mountain</li>
 <li>Nighthawk - Carowinds</li>
