--- a/trips.html
+++ b/trips.html
@@ -46,8 +46,9 @@ div.c {
 
 <h3>Here you will find trip reports dating back to 2016.</h3>
 
-<a href="kenny22.html" style="color: #27F5CA;">Kennywood Park 6/23/22</a><br>
-<a href="fl22.html" style="color: #27F5CA;">Central Florida Parks 6/1/2022-6/13/22</a><br>
+Atlanta parks - coming late summer! <br>
+<a href="kenny22.html" style="color: #27F5CA;">Kennywood Park 6/23/2022</a><br>
+<a href="fl22.html" style="color: #27F5CA;">Central Florida Parks 6/1/2022-6/13/2022</a><br>
 <a href="br22.html" style="color: #27F5CA;">Big Rivers Waterpark & Adventures 4/16/2022</a><br>
 <a href="sfot22.html" style="color: #27F5CA;">Six Flags Over Texas 3/17/2022-3/18/2022</a><br>
 <a href="sfft21.html" style="color: #27F5CA;">Six Flags Fiesta Texas 7/15/2021</a><br>
