--- a/allparks.html
+++ b/allparks.html
@@ -55,6 +55,7 @@ div.c {
 <li>Canada's Wonderland - 2012 </li>
 <li>Carowinds - <a href="carowinds21.html" style="color: #27F5CA;">2021</a></li>
 <li>Cedar Point - 2009, <a href="cp2019.html" style="color: #27F5CA;">2019</a> </li>
+<li>Fun Spot Atlanta - <a href="fsa22.html" style="color: #27F5CA;">2022</a></li>
 <li>Fun Spot Kissimmee - <a href="fsk22.html" style="color: #27F5CA;">2022</a></li>
 <li>Fun Spot Orlando - <a href="fso22.html" style="color: #27F5CA;">2022</a></li>
 <li>Geauga Lake - 2005 </li>
@@ -79,7 +80,7 @@ div.c {
 <li>Six Flags Great America - <a href="sfgam2019.html" style="color: #27F5CA;">2019</a></li>
 <li>Six Flags Kentucky Kingdom - 2009</li>
 <li>Six Flags Magic Mountain - 2011</li>
-<li>Six Flags Over Georgia - 2010</li>
+<li>Six Flags Over Georgia - 2010,  <a href="sfog22.html" style="color: #27F5CA;">2022</a></li>
 <li>Six Flags Over Texas - 2006, 2007, <a href="sfot22.html" style="color: #27F5CA;">2022</a></li>
 <li>Thorpe Park - <a href="thorpe2018.html" style="color: #27F5CA;">2018</a></li>
 <li>Universal Studios Florida - <a href="usf22.html" style="color: #27F5CA;">2022</a></li>
