--- a/top5022.html
+++ b/top5022.html
@@ -89,6 +89,7 @@ div.c {
 <li>Phantom's Revenge - Kennywood Park</li>
 <li>Boardwalk Bullet - Kemah Boardwalk</li>
 <li>Mr. Freeze Reverse Blast - Six Flags Over Texas</li>
+<li>Twisted Cyclone - Six Flags Over Georgia</li>
 <li>Cheetah Hunt - Busch Gardens Tampa </li>
 <li>Intimidator - Carowinds</li>
 <li>X-Flight - Six Flags Great America</li>
@@ -97,10 +98,11 @@ div.c {
 <li>Afterburn - Carowinds</li>
 <li>American Eagle - Six Flags Great America</li>
 <li>Diamondback - Kings Island </li>
+<li>B&M Batman clones - 7 parks</li>
 <li>Colossus - Thorpe Park</li>
-<li>Rougarou - Cedar Point</li>
+<!--<li>Rougarou - Cedar Point</li>
 <li>Raptor - Cedar Point</li>
-<!--<li>Great Bear - Hersheypark</li>
+<li>Great Bear - Hersheypark</li>
 <li>Fahrenheit - Hersheypark</li>
 <li>Maverick - Cedar Point</li>
 <li>Superman Ultimate Flight - 2 parks </li>
