--- a/topparks22.html
+++ b/topparks22.html
@@ -34,7 +34,7 @@ div.c {
 
 <div>
 <center><img src = "erinlovescoasters_white.png" height = 100></center>
-<center><h1>My Top15  Amusement Parks</h1></center>
+<center><h1>My Top 15  Amusement Parks</h1></center>
 
 <div class="c">
 <nav><center>
@@ -46,7 +46,7 @@ div.c {
 </center></nav></div><br>
 
 
-<h3>This is a list of my 15 favorite parks and the year of my most recent visit.</h3>
+<h3>This is a list of my favorite parks and the year of my most recent visit.</h3>
 
 <ol>
 <li>Cedar Point (2019) </li>
@@ -58,8 +58,8 @@ div.c {
 <li>Universal's Islands of Adventure (2022)</li>
 <li>Hersheypark (2010) </li>
 <li>Six Flags Fiesta Texas (2021)</li>
+<li>Six Flags Over Georgia (2022) </li>
 <li>Kennywood Park (2022)</li>
-<li>Six Flags Over Georgia (2010) </li>
 <li>Six Flags Over Texas (2022) </li>
 <li>Canada's Wonderland (2012)</li>
 <li>Walt Disney World (2022)</li>
