--- a/trips.html
+++ b/trips.html
@@ -46,7 +46,8 @@ div.c {
 
 <h3>Here you will find trip reports dating back to 2016.</h3>
 
-Atlanta parks - coming late summer! <br>
+<a href="fsa22.html" style="color: #27F5CA;">Fun Spot Atlanta 8/1/2022</a><br>
+<a href="sfog22.html" style="color: #27F5CA;">Six Flaags Over Georgia 7/29/2022</a><br>
 <a href="kenny22.html" style="color: #27F5CA;">Kennywood Park 6/23/2022</a><br>
 <a href="fl22.html" style="color: #27F5CA;">Central Florida Parks 6/1/2022-6/13/2022</a><br>
 <a href="br22.html" style="color: #27F5CA;">Big Rivers Waterpark & Adventures 4/16/2022</a><br>
