--- a/usf22.html
+++ b/usf22.html
@@ -45,28 +45,28 @@ div.c {
 <a href="other.html" style="color: #27F5CA;">Other Links</a>
 </nav></div></center><br>
 
-<h3>I only spent a half day at USF because I ran out of things to do. This park has nowhere near the ride lineup quality of its neighboring park. </h3><br>
+<h3>I only spent a half day at USF because I ran out of things to do. This park has nowhere near the ride lineup quality of its sister park. </h3><br>
 
 
 <h2>Overview</h2>
-<p>Day 8 of my trip was split between Universal Studios Florida and Fun Spot Orlando. I visited USF from 9:30AM-2:30PM and rode Rip Ride Rockit 3 times, Gringotts once, and Woody Woodpecker once. Overall, I was disappointed with USF's attraction offerings. Even when the Mummy returns, this park still needs more thrill rides. I overetimated the amount of time I thought I needed here and left after 5 hours. There was limited shade here. Diagon Alley and RRR are currently the only reasons to visit USF. </p>
+<p>Day 8 of my trip was split between Universal Studios Florida and Fun Spot Orlando. I visited USF from 9:30AM-2:30PM and rode Rip Ride Rockit 3 times, Gringotts once, and Woody Woodpecker once. Overall, I was disappointed with USF's attraction offerings. Even when the Mummy returns, this park still needs more thrill rides. I overestimated the amount of time I needed at the park and left after 5 hours. There was limited shade here. Numerous construction walls added to my frustration. Diagon Alley and RRR are currently the only reasons to visit USF. </p>
 
 <br><h2>Coasters</h2>
-<p> My favorite coaster at Studios was Maurer's <b>Hollywood Rip Ride Rockit</b>. It has some great airtime, intense moments, and a unique feature with song selection. The seats are comfortable too. However, the drop is shallow, the coaster is bumpy, and there's bad pacing with brakes everywhere. I rode in the very back and front rows. The back is better for speed and airtime. The line moved quickly, but has the dreadful mandatory locker policy that I detail in my <a href= "ioa22.html" style="color: #27F5CA;">Islands of Adventure</a> report.<br><br>
+<p> My favorite coaster at Studios is Maurer's <b>Hollywood Rip Ride Rockit</b>. It has some great airtime, intense moments, and a unique feature with individual rider song selection. The seats are comfortable too. However, the drop is shallow, the coaster is bumpy, and there's bad pacing with brakes everywhere. I rode in the very back and front rows. The back is better for speed and airtime. The line moves quickly, but has the dreadful mandatory locker policy that I detail in my <a href= "ioa22.html" style="color: #27F5CA;">Islands of Adventure</a> report. I used the standby queue all three times.<br><br>
 
-I rode <b>Harry Potter and the Escape from Gringotts</b> without 3D glasses but still enjoyed it. Somehow I missed picking them up in the single rider line. This ride felt really similar to Spider-Man at IOA but with a drop and a few more thrills. Forbidden Journey still gets the edge for its storyline and maneuvers. I loved the exterior of the Gringotts building and dragon. The locker area for this coaster was tiny and crowded. I might've gone back for another ride elsewise.<br><br>
+I rode <b>Harry Potter and the Escape from Gringotts</b> without 3D glasses but still enjoyed it. Somehow I missed picking them up in the single rider line. This ride felt really similar to Spider-Man at IOA but with a drop, different theming, and a few more thrills. Forbidden Journey still gets the edge over this ride for its storyline and maneuvers. I love the exterior of the Gringotts building and the fire-breathing dragon. The locker area for this coaster is tiny and crowded. I might've gone back for another ride elsewise.<br><br>
 
 I have no comment on Woody Woodpecker's Nuthouse Coaster.
 </p>
 
 <br><h2>Other Rides</h2>
-<p>I rode E.T., The Simpsons Ride, and Race Through New York Starring Jimmy Fallon. Simpsons was my favorite, but they were all good. Transformers was the only other ride I was interested in, but I didn't want to wait 1-2 hours. </p>
+<p>I rode E.T., The Simpsons Ride, and Race Through New York Starring Jimmy Fallon. Simpsons was my favorite of the trio, but they were all good. Aside from Revenge of the Mummy, Transformers was the only other ride I was interested in at USF, but I didn't want to wait 1-2 hours for it. </p>
 
 <br><h2>Food & Merchandise</h2>
-<p>I bought a pizza-stuffed pretzel and water bottle at a refreshment stand for $12. It was tasty albeit messy. At the Universal Studios Store in CityWalk, I purchased 4 t-shirts, a mug, and a hat for $154 total. Most of this haul was for family members. The Universal Studios Store had a great selection of Harry Potter things, Marvel/Dr. Seuss/Jurassic Park apparel, Studios merch, trinkets, and other souvenirs. </p>
+<p>I bought a pizza-stuffed pretzel and water bottle at a refreshment stand for $12. It was tasty albeit messy. At the Universal Studios Store in CityWalk, I purchased 4 t-shirts, a mug, and a hat for $154 total. Most of this haul was for my family members. The Universal Studios Store had a great selection of Harry Potter things, Marvel/Dr. Seuss/Jurassic Park/Simpsons apparel, Studios merch, trinkets, and other souvenirs. </p>
 
 <br><h2>Cost</h2>
-<p>The ticket option I went with was the 3-Park 3-Day Base Ticket with 2 Days Free promotion, which cost $354 total. I also received $200 off my 7-night hotel stay at Dockside Inn & Suites for bundling my ticket and room. I wouldn't have purchased a 5-day ticket if the bonus days hadn't been free. Two or three days is plenty of time for a solo coaster enthusiast to visit both IOA and USF. When EU opens, 5 days will probably be ideal. Check out the cost breakdown of my entire trip <a href="flcost22.html" style="color: #27F5CA;">here</a>.</p>
+<p>The ticket option I went with was the 3-Park 3-Day Base Ticket with 2 Days Free promotion, which cost $354 total. I also received $200 off my 7-night hotel stay at Dockside Inn & Suites for bundling my ticket and room. I wouldn't have purchased a 5-day ticket if the bonus days hadn't been free. Two or three days is plenty of time for a solo coaster enthusiast to visit both IOA and USF. When Epic Universe opens, 5 days will probably be ideal. Check out the cost breakdown of my entire trip <a href="flcost22.html" style="color: #27F5CA;">here</a>.</p>
 
 <br><h2>Photos</h2>
 <p>These photos were taken by me. Please credit this website if used.  </p>
