--- a/worstcoasters.html
+++ b/worstcoasters.html
@@ -48,11 +48,10 @@ div.c {
 
 <ol>
 <li>Time Warp - Canada's Wonderland </li>
-<li>Ninja - Six Flags Over Georgia </li>
+<li>Ninja/Blue Hawk - Six Flags Over Georgia </li>
 <li>Wild Beast - Canada's Wonderland </li>
 <li>Wildcat - Hersheypark </li>
 <li>T2 - Six Flags Kentucky Kingdom </li>
-<li>Great American Scream Machine - Six Flags Over Georgia </li>
 <li>Demon - Six Flags Great America </li>
 <li>The Walking Dead the Ride - Thorpe Park</li>
 
