more details to tripreports

--- a/bgt22.html
+++ b/bgt22.html
@@ -66,7 +66,9 @@ Schwarzkopf's <b>Scorpion</b> was more intense than anticipated. Since I rode wi
 
 <b>Tigris</b> was a dud for me. I strongly dislike the trains, restraints, and (dis)comfort collars. The abrupt twists bang me around. There is very forceful airtime, but I couldn't enjoy it. The front row was more tolerable than the back. The best part is probably the slow roll, but even that's just alright.<br><br>
 
-I don't have comments on Cobra's Curse, Sand Serpent, or Air Grover.
+<b>Cobra's Curse</b> serves as an intermediate coaster at BGT. Its thrill level is slightly more intense than the Pandemonium clones at Six Flags parks. This ride is well-themed, long, and well-rounded. I think it might've been my first coaster with an elevator lift. Cobra's Cuurse had a lot of downtime and long lines during my visit.<br><br>
+
+I don't have comments on Sand Serpent or Air Grover.
 </p>
 
 <br><h2>Other Rides</h2>
