update, typos, grammar

--- a/fso22.html
+++ b/fso22.html
@@ -45,18 +45,18 @@ div.c {
 <a href="other.html" style="color: #27F5CA;">Other Links</a>
 </nav></div></center><br>
 
-<h3>After going to some very busy parks, spending time at another Fun Spot location was a welcomed change from crowds, toddler meltdowns, and long walks.</h3><br>
+<h3>After going to some very busy parks in Florida, spending time at another Fun Spot location was a welcomed change from crowds, toddler meltdowns, and long walks.</h3><br>
 
 
 <h2>Overview</h2>
-<p>I visited FSO on June 8 from 5:30PM-9:30PM and June 13 from 11:30AM-1:30PM. My coaster totals were 25 on White Lightning, 3 on Freedom Flyer, and 1 on Sea Serpent. This park has similar vibes to the Fun Spot in Kissimmee, but is not broken into two sections and has metal detectors to enter. While I prefer the coaster collection at FSK, FSO has the better location. There are also more go-kart tracks. Like FSK, wait times are pretty much nonexistent here. I am also happy that the Fun Spots are open until midnight, which is usually 2 or 3 hours later than the big parks.</p>
+<p>I visited FSO on June 8 from 5:30PM-9:30PM and June 13 from 11:30AM-1:30PM. My coaster totals were 25 on White Lightning, 3 on Freedom Flyer, and 1 on Sea Serpent. This park has similar vibes to the Fun Spot in Kissimmee, but has metal detectors at the entrance and is not broken into two sections. While I prefer the coaster collection at FSK, FSO has the better location and layout. There are also more go-kart tracks. Like FSK, wait times are pretty much nonexistent here. I am also happy that the Fun Spots are open until midnight, which is usually 2 or 3 hours later than the big parks.</p>
 
 <br><h2>Coasters</h2>
-<p> <b>White Lightning</b> has a similar thrill level and experience to Switchback at ZDT's. I prefer Switchback for its superior drop and restraints. On White Lightning, areas that have yet to be Titan-tracked are bumpy, namely the double up/double down, and the final hundred feet or so into the brake run, starting with the right turn. The parts of the layout that have Titan track are very smooth.I rode in all rows, and slightly like the back more than the front. At 25 rides, this GCI now takes the title of my most-ridden coaster. It's an enjoyable woodie with several airtime moments for families and thrillseekers alike, but is a bit bumpy. So far, Mine Blower is still my favorite coaster at a Fun Spot park.  <br><br>
+<p><b>White Lightning</b> has a similar thrill level and experience to Switchback at ZDT's. I prefer Switchback for its superior drop and restraints. On White Lightning, areas that have yet to be Titan-tracked are bumpy, namely the double up/double down, and the final hundred feet or so into the brake run, starting with the right turn. The parts of the layout that have Titan track are very smooth. I rode in all rows, and slightly liked the back more than the front. At 25 rides, this GCI now takes the title of my most-ridden coaster. White Lightning is an enjoyable woodie for families and thrillseekers alike, with several airtime moments, drops, and forceful turns. It is a bit bumpy though. So far, Mine Blower is still my favorite coaster at a Fun Spot park.  <br><br>
 
-<b>Freedom Flyer</b> was a lot better than similar Vekoma family coasters with those bulky restraints. I'm talking about Kiddy Hawk, Flying Ace, and Flying School. On Freedom Flyer, I did not have to ride defensively and could enjoy it. It's in a great location too, and pulls decent forces near the end of the ride. I elected to re-ride this coaster a couple times since it didn't beat me up. I wish the old Vekoma family coasters could get the restraints that Freedom Flyer has.<br><br>
+<b>Freedom Flyer</b> was a lot better than similar Vekoma family coasters with those bulky restraints. I'm talking about Kiddy Hawk, Flying Ace, Silver Streak, and Flying School. On Freedom Flyer, I did not have to ride defensively and could enjoy the ride. It's in a great location too, and pulls decent forces near the end. I elected to re-ride this coaster a couple times since it didn't beat me up. It's a wonderful introduction to the suspended configuration. I wish the old Vekoma family coasters could get the restraints that Freedom Flyer has.<br><br>
 
-No comment on <b>Sea Serpent</b>.
+I have no comment on <b>Sea Serpent</b>.
 
 </p>
 
