--- a/allparks.html
+++ b/allparks.html
@@ -52,6 +52,7 @@ div.c {
 <ul>
 <li>Big Rivers Waterpark & Adventures - <a href="br22.html" style="color: #27F5CA;">2022</a></li> 
 <li>Busch Gardens Tampa - <a href="bgt22.html" style="color: #27F5CA;">2022</a></li>
+<li>Camp Fimfo Texas Hill Country - <a href="fimfo23.html" style="color: #27F5CA;">2023</a></li>
 <li>Canada's Wonderland - 2012 </li>
 <li>Carowinds - <a href="carowinds21.html" style="color: #27F5CA;">2021</a></li>
 <li>Cedar Point - 2009, <a href="cp2019.html" style="color: #27F5CA;">2019</a> </li>
@@ -76,7 +77,7 @@ div.c {
 <li>SeaWorld Orlando - <a href="swo22.html" style="color: #27F5CA;">2022</a></li>
 <li>SeaWorld San Antonio - 2004, 2008, <a href="swsa21.html" style="color: #27F5CA;">2021</a></li>
 <li>Six Flags AstroWorld - 2005</li>
-<li>Six Flags Fiesta Texas - 2007, 2008, 2011, 2012, 2014, <a href="sfft21.html" style="color: #27F5CA;">2021</a></li>
+<li>Six Flags Fiesta Texas - 2007, 2008, 2011, 2012, 2014, <a href="sfft21.html" style="color: #27F5CA;">2021</a>, <a href="sfft23.html" style="color: #27F5CA;">2023</a></li>
 <li>Six Flags Great America - <a href="sfgam2019.html" style="color: #27F5CA;">2019</a></li>
 <li>Six Flags Kentucky Kingdom - 2009</li>
 <li>Six Flags Magic Mountain - 2011</li>
