--- a/pp22.html
+++ b/pp22.html
@@ -49,16 +49,16 @@ div.c {
 
 
 <h2>Overview</h2>
-<p>My visit to this small, cute, kiddie park lasted about 40 minutes, from 9:45AM-10:25AM. I rode Daddy Pig's Roller Coaster twice, the walked around for a bit and rode a couple other rides. This park is really neat for young children, and I'm glad that it's only steps away from Legoland. I did feel a little out of place as a childless adult, but enjoyed my visit. Attraction-wise, Daddy Pig is the star. </p>
+<p>My visit to this small, cute, kiddie park lasted about 40 minutes, from 9:45AM-10:25AM. I rode Daddy Pig's Roller Coaster twice, the walked around for a bit and rode a couple other rides. This park is really neat for young children, and I'm glad that it's only steps away from Legoland. I felt a little out of place as a childless adult, but enjoyed my visit. Attraction-wise, Daddy Pig is the star. </p>
 
 <br><h2>Coaster</h2>
-<p> I don't have much to say about <b>Daddyy Pig's Roller Coaster</b>. It's charming and decently-themed but completely forceless. I appreciate that each cycle is two laps long. There was no line on the mornning of my visit. Kid riders seemed to have a blast!</p>
+<p> I don't have much to say about <b>Daddy Pig's Roller Coaster</b>. It's charming and decently-themed but completely forceless. I appreciate that each cycle is two laps long. There was no line on the mornning of my visit. Kid riders seemed to have a blast!</p>
 
 <br><h2>Other Rides</h2>
 <p>I rode Peppa Pig's Balloon Race and Grampy Rabbit's Dinosaur Adventure. </p>
 
 <br><h2>Food & Merchandise</h2>
-<p>I didn't purchase food or merch at this park, but they have dining location and a gift shop.  </p>
+<p>I didn't purchase food or merch at this park, but they have dining locations and a gift shop.  </p>
 
 <br><h2>Cost</h2>
 <p>I bought a Legoland and Peppa Pig combo ticket from CityPass for $103 total. Buying directly from Legoland's website would've cost $21 more, so I opted for the third-party option and had no issues. Check out the cost breakdown of my entire trip <a href="flcost22.html" style="color: #27F5CA;">here</a>. </p>
