--- a/top5022.html
+++ b/top5022.html
@@ -14,7 +14,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Erin's Top 50 Coasters</title>
+<title>Erin's Top 50 Coasters (2022)</title>
 <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 <style>
 div {
@@ -34,7 +34,7 @@ div.c {
 
 <div>
 <center><img src = "erinlovescoasters_white.png" height = 100></center>
-<center><h1>Top 50 Roller Coasters</h1></center>
+<center><h1>Top 50 Roller Coasters in 2022</h1></center>
 
 
 <div class="c">
@@ -46,7 +46,7 @@ div.c {
 <a href="other.html" style="color: #27F5CA;">Other Links</a>
 </center></nav></div><br>
 
-<h3>These are my favorite 50 roller coasters thus far, accounting for roughly 21% of all coasters I've ridden.</h3>
+<h3>These are my favorite 50 roller coasters thus far, accounting for roughly 21% of all coasters I've ridden. ***This page is outdated. To see my current list of top coasters, click <a href= "top5023.html" style="color: #27F5CA;">here</a>.  </h3>
 
 
 <ol>
