--- a/topparks22.html
+++ b/topparks22.html
@@ -34,7 +34,7 @@ div.c {
 
 <div>
 <center><img src = "erinlovescoasters_white.png" height = 100></center>
-<center><h1>My Top 15  Amusement Parks</h1></center>
+<center><h1>My Top 15  Amusement Parks (2022)</h1></center>
 
 <div class="c">
 <nav><center>
@@ -46,7 +46,7 @@ div.c {
 </center></nav></div><br>
 
 
-<h3>This is a list of my favorite parks and the year of my most recent visit.</h3>
+<h3>This is a list of my favorite parks and the year of my most recent visit. ***This page is outdated. Click <a href= "topparks23.html" style="color: #27F5CA;">here</a> to view my current list of top parks.</h3>
 
 <ol>
 <li>Cedar Point (2019) </li>
