--- a/topparks23.html
+++ b/topparks23.html
@@ -34,7 +34,7 @@ div.c {
 
 <div>
 <center><img src = "erinlovescoasters_white.png" height = 100></center>
-<center><h1>My Top 10 Amusement Parks (2021)</h1></center>
+<center><h1>My Top 15  Amusement Parks</h1></center>
 
 <div class="c">
 <nav><center>
@@ -46,27 +46,25 @@ div.c {
 </center></nav></div><br>
 
 
-<h3>This is a list of my 10 favorite parks and the year of my most recent visit. ***This page is outdated. Click <a href= "topparks23.html" style="color: #27F5CA;">here</a> to view my current list of top parks.</h3>
+<h3>This is a list of my favorite parks and the year of my most recent visit. </h3>
 
 <ol>
 <li>Cedar Point (2019) </li>
 <li>Kings Island (2021) </li>
-<!--<li>Busch Gardens Tampa (2022) </li>-->
+<li>Busch Gardens Tampa (2022) </li>
 <li>Six Flags Magic Mountain (2011) </li>
 <li>Six Flags Great America (2019) </li>
 <li>Carowinds (2021) </li>
-<!--<li>Universal's Islands of Adventure (2022)--> </li>
+<li>Six Flags Fiesta Texas (2023)</li>
+<li>Universal's Islands of Adventure (2022)</li>
 <li>Hersheypark (2010) </li>
-<li>Six Flags Fiesta Texas (2021)</li>
-<li>Six Flags Over Georgia (2010) </li>
-<li>Six Flags Over Texas (2007) </li>
+<li>Six Flags Over Georgia (2022) </li>
+<li>Kennywood Park (2022)</li>
+<li>Six Flags Over Texas (2022) </li>
 <li>Canada's Wonderland (2012)</li>
+<li>Walt Disney World (2022)</li>
+<li>SeaWorld Orlando (2022)</li>
 <!--<li>Thorpe Park (2018) </li>-->
-
 </ol>
 
 <p>*I did not consider Geauga Lake or Six Flags AstroWorld in this list. I visited both parks once in 2005 when I was too short to ride most of the good coasters, and I have foggy memories of those places in general.</p><br>
-
-</div>
-</body>
-</html>
