--- a/trips.html
+++ b/trips.html
@@ -46,6 +46,8 @@ div.c {
 
 <h3>Here you will find trip reports dating back to 2016.</h3>
 
+<a href="sfft23.html" style="color: #27F5CA;">Six Flags Fiesta Texas 3/11/2023-3/13/2023</a><br>
+<a href="fimfo23.html" style="color: #27F5CA;">Camp Fimfo Texas Hill Country 3/11/2023</a><br>
 <a href="fsa22.html" style="color: #27F5CA;">Fun Spot Atlanta 8/1/2022</a><br>
 <a href="sfog22.html" style="color: #27F5CA;">Six Flags Over Georgia 7/29/2022</a><br>
 <a href="kenny22.html" style="color: #27F5CA;">Kennywood Park 6/23/2022</a><br>
