--- a/top5023.html
+++ b/top5023.html
@@ -14,7 +14,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Erin's Top 50 Coasters (2021)</title>
+<title>Erin's Top 50 Coasters</title>
 <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 <style>
 div {
@@ -34,7 +34,7 @@ div.c {
 
 <div>
 <center><img src = "erinlovescoasters_white.png" height = 100></center>
-<center><h1>Top 50 Roller Coasters in 2021</h1></center>
+<center><h1>Top 50 Roller Coasters</h1></center>
 
 
 <div class="c">
@@ -46,36 +46,51 @@ div.c {
 <a href="other.html" style="color: #27F5CA;">Other Links</a>
 </center></nav></div><br>
 
-<h3>These are my favorite 50 roller coasters thus far, accounting for roughly 27% of all coasters I've ridden. ***This page is outdated. To see my current list of top coasters, click <a href= "top5023.html" style="color: #27F5CA;">here</a>.</h3>
+<h3>These are my favorite 50 roller coasters thus far, accounting for roughly 20% of all coasters I've ridden.</h3>
 
 
 <ol>
 <li>Fury 325 - Carowinds </li>
 <li>Millennium Force - Cedar Point </li>
+<li>Iron Gwazi - Busch Gardens Tampa </li>
 <li>Top Thrill Dragster - Cedar Point </li>
 <li>Steel Vengeance - Cedar Point </li>
+<li>Velocicoaster - Universal's Islands of Adventure</li>
+<li>Kumba - Busch Gardens Tampa</li>
 <li>Superman Krypton Coaster - Six Flags Fiesta Texas </li>
 <li>Orion - Kings Island </li>
 <li>Raging Bull - Six Flags Great America </li>
+<li>Montu - Busch Gardens Tampa </li>
+<li>Mako - SeaWorld Orlando </li>
 <li>Banshee - Kings Island </li>
 <li>Tatsu - Six Flags Magic Mountain </li>
 <li>GateKeeper - Cedar Point </li>
 <li>The Beast - Kings Island </li>
+<li>Manta - SeaWorld Orlando </li>
 <li>Goliath - Six Flags Over Georgia</li>
 <li>Maxx Force - Six Flags Great America</li>
 <li>Shivering Timbers - Michigan's Adventure</li>
 <li>Leviathan - Canada's Wonderland</li>
-<li>Copperhead Strike - Carowinds</li>
 <li>Wonder Woman Golden Lasso Coaster - Six Flags Fiesta Texas</li>
+<li>Steel Curtain - Kennywood Park</li>
+<li>Copperhead Strike - Carowinds</li>
 <li>Behemoth - Canada's Wonderland</li>
+<li>New Texas Giant - Six Flags Over Texas</li>
+<li>Hagrid's Magical Creatures Motorbike Adventure - Universal's Islands of Adventure </li>
 <li>Storm Runner - Hersheypark</li>
 <li>Valravn - Cedar Point</li>
-<li>Iron Rattler - Six Flags Fiesta Texas</li>
+<li>Incredible Hulk - Universal's Islands of Adventure </li>
 <li>Chang - Six Flags Kentucky Kingdom</li>
 <li>Scream! - Six Flags Magic Mountain</li>
 <li>Goliath - Six Flags Great America</li>
+<li>Kraken - SeaWorld Orlando </li>
 <li>Riddler's Revenge - Six Flags Magic Mountain</li>
+<li>Iron Rattler - Six Flags Fiesta Texas</li>
+<li>Phantom's Revenge - Kennywood Park</li>
 <li>Boardwalk Bullet - Kemah Boardwalk</li>
+<li>Mr. Freeze Reverse Blast - Six Flags Over Texas</li>
+<li>Twisted Cyclone - Six Flags Over Georgia</li>
+<li>Cheetah Hunt - Busch Gardens Tampa </li>
 <li>Intimidator - Carowinds</li>
 <li>X-Flight - Six Flags Great America</li>
 <li>The Swarm - Thorpe Park</li>
@@ -83,8 +98,9 @@ div.c {
 <li>Afterburn - Carowinds</li>
 <li>American Eagle - Six Flags Great America</li>
 <li>Diamondback - Kings Island </li>
+<li>B&M Batman clones - 7 parks</li>
 <li>Colossus - Thorpe Park</li>
-<li>Rougarou - Cedar Point</li>
+<!--<li>Rougarou - Cedar Point</li>
 <li>Raptor - Cedar Point</li>
 <li>Great Bear - Hersheypark</li>
 <li>Fahrenheit - Hersheypark</li>
@@ -93,16 +109,14 @@ div.c {
 <li>Deja Vu - Six Flags Magic Mountain</li>
 <li>Nighthawk - Carowinds</li>
 <li>Mystic Timbers - Kings Island </li>
+<li>B&M Batman clones - 7 parks</li>
 <li>Goliath - La Ronde</li>
 <li>Steel Eel - SeaWorld San Antonio</li>
 <li>Le Monstre - La Ronde</li>
 <li>Saw the Ride - Thorpe Park</li>
-<li>B&M Batman clones - 6 parks</li>
 <li>Switchback - ZDT's Amusement Park</li>
 <li>Vertical Velocity - Six Flags Great America </li>
-
-
-<!--<li>Viper - Six Flags Great America</li>
+<li>Viper - Six Flags Great America</li>
 <li>Magnum XL-200 - Cedar Point</li>
 <li>Nemesis Inferno - Thorpe Park</li>
 <li>Iron Shark - Pleasure Pier</li>
