update 2023 solo trip

--- a/topparks23.html
+++ b/topparks23.html
@@ -56,15 +56,17 @@ div.c {
 <li>Six Flags Great America (2019) </li>
 <li>Carowinds (2021) </li>
 <li>Six Flags Fiesta Texas (2023)</li>
+<li>Lagoon (2023)</li>
 <li>Universal's Islands of Adventure (2022)</li>
 <li>Hersheypark (2010) </li>
 <li>Six Flags Over Georgia (2022) </li>
+<li>California's Great America (2023)</li>
 <li>Kennywood Park (2022)</li>
 <li>Six Flags Over Texas (2022) </li>
 <li>Canada's Wonderland (2012)</li>
-<li>Walt Disney World (2022)</li>
+<!--<li>Walt Disney World (2022)</li>
 <li>SeaWorld Orlando (2022)</li>
-<!--<li>Thorpe Park (2018) </li>-->
+<li>Thorpe Park (2018) </li>-->
 </ol>
 
 <p>*I did not consider Geauga Lake or Six Flags AstroWorld in this list. I visited both parks once in 2005 when I was too short to ride most of the good coasters, and I have foggy memories of those places in general.</p><br>
