--- a/trips.html
+++ b/trips.html
@@ -46,6 +46,9 @@ div.c {
 
 <h3>Here you will find trip reports dating back to 2016.</h3>
 
+<a href="cga23.html" style="color: #27F5CA;">California's Great America 6/10/2023-6/11/2023</a><br>
+<a href="sfdk23.html" style="color: #27F5CA;">Six Flags Discovery Kingdom 6/8/2023-6/9/2023</a><br>
+<a href="lagoon23.html" style="color: #27F5CA;">Lagoon 6/6/2023-6/7/2023</a><br>
 <a href="sfft23.html" style="color: #27F5CA;">Six Flags Fiesta Texas 3/11/2023-3/13/2023</a><br>
 <a href="fimfo23.html" style="color: #27F5CA;">Camp Fimfo Texas Hill Country 3/11/2023</a><br>
 <a href="fsa22.html" style="color: #27F5CA;">Fun Spot Atlanta 8/1/2022</a><br>
