--- a/worstcoasters.html
+++ b/worstcoasters.html
@@ -51,7 +51,7 @@ div.c {
 <li>Ninja/Blue Hawk - Six Flags Over Georgia </li>
 <li>Wild Beast - Canada's Wonderland </li>
 <li>Wildcat - Hersheypark </li>
-<li>T2 - Six Flags Kentucky Kingdom </li>
+<li>T2 - Six Flags Kentucky Kingdom and Kong - Six Flags Discovery Kingdom </li>
 <li>Demon - Six Flags Great America </li>
 <li>The Walking Dead the Ride - Thorpe Park</li>
 
