--- a/top5023.html
+++ b/top5023.html
@@ -46,7 +46,7 @@ div.c {
 <a href="other.html" style="color: #27F5CA;">Other Links</a>
 </center></nav></div><br>
 
-<h3>These are my favorite 50 roller coasters thus far, accounting for roughly 20% of all coasters I've ridden.</h3>
+<h3>These are my favorite 50 roller coasters thus far, accounting for roughly 18% of all coasters I've ridden.</h3>
 
 
 <ol>
@@ -66,20 +66,23 @@ div.c {
 <li>Tatsu - Six Flags Magic Mountain </li>
 <li>GateKeeper - Cedar Point </li>
 <li>The Beast - Kings Island </li>
+<li>Cannibal - Lagoon </li>
 <li>Manta - SeaWorld Orlando </li>
 <li>Goliath - Six Flags Over Georgia</li>
+<li>Wonder Woman Golden Lasso Coaster - Six Flags Fiesta Texas & RailBlazer - California's Great America</li>
 <li>Maxx Force - Six Flags Great America</li>
 <li>Shivering Timbers - Michigan's Adventure</li>
 <li>Leviathan - Canada's Wonderland</li>
-<li>Wonder Woman Golden Lasso Coaster - Six Flags Fiesta Texas</li>
 <li>Steel Curtain - Kennywood Park</li>
 <li>Copperhead Strike - Carowinds</li>
 <li>Behemoth - Canada's Wonderland</li>
+<li>Gold Striker - California's Great America</li>
 <li>New Texas Giant - Six Flags Over Texas</li>
 <li>Hagrid's Magical Creatures Motorbike Adventure - Universal's Islands of Adventure </li>
 <li>Storm Runner - Hersheypark</li>
 <li>Valravn - Cedar Point</li>
 <li>Incredible Hulk - Universal's Islands of Adventure </li>
+<li>Joker - Six Flags Discovery Kingdom </li>
 <li>Chang - Six Flags Kentucky Kingdom</li>
 <li>Scream! - Six Flags Magic Mountain</li>
 <li>Goliath - Six Flags Great America</li>
@@ -97,10 +100,10 @@ div.c {
 <li>Lightning Racer - Hersheypark</li>
 <li>Afterburn - Carowinds</li>
 <li>American Eagle - Six Flags Great America</li>
-<li>Diamondback - Kings Island </li>
+<!--<li>Diamondback - Kings Island </li>
 <li>B&M Batman clones - 7 parks</li>
 <li>Colossus - Thorpe Park</li>
-<!--<li>Rougarou - Cedar Point</li>
+<li>Rougarou - Cedar Point</li>
 <li>Raptor - Cedar Point</li>
 <li>Great Bear - Hersheypark</li>
 <li>Fahrenheit - Hersheypark</li>
@@ -109,7 +112,6 @@ div.c {
 <li>Deja Vu - Six Flags Magic Mountain</li>
 <li>Nighthawk - Carowinds</li>
 <li>Mystic Timbers - Kings Island </li>
-<li>B&M Batman clones - 7 parks</li>
 <li>Goliath - La Ronde</li>
 <li>Steel Eel - SeaWorld San Antonio</li>
 <li>Le Monstre - La Ronde</li>
